PHOENIX-3293 Create separate test categories for stats enabled and disabled